--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -3,7 +3,7 @@
 .project {
   background-color: $p-bg-color;
   color: $primary-color;
-  margin-bottom: 4rem;
+  margin-bottom: 5rem;
   width: 100%;
   padding: 3.5rem;
   box-sizing: border-box;
@@ -11,7 +11,8 @@
   display: flex;
   flex-direction: column;
   border-radius: 0.4rem;
-  box-shadow: 0 0.25rem 0.7rem #12181e;
+  box-shadow: 0 50px 100px rgba(50, 50, 93, 0.05),
+    0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 
   &__image {
@@ -31,20 +32,20 @@
 
   &__title {
     font-weight: 500;
-    font-size: 2.4rem;
+    font-size: 2.7rem;
 
     margin-top: 0;
     margin-bottom: 2rem;
   }
 
   &__description {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     margin-bottom: 3rem;
     line-height: 2.7rem;
   }
 
   &__skill {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     border-radius: 0.4rem;
     border: 2px solid $skill-color;
     padding: 0.5rem;
@@ -65,14 +66,14 @@
     letter-spacing: 0.025rem;
     text-decoration: none;
     transition: all 0.2s ease;
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 1.7rem;
+    font-weight: 600;
     box-sizing: border-box;
     background: $secondary-color;
     color: $btn-text-color;
 
     &:hover {
-      background-color: $btn-hover-color;
+      opacity: 0.8;
       transform: translateY(-1px);
     }
   }
@@ -80,11 +81,7 @@
 
 .secondary {
   background: $btn2-bg-color;
-  color: $secondary-color;
-
-  &:hover {
-    background-color: $btn2-hover-color;
-  }
+  color: $btn2-text-color;
 }
 
 @media (min-width: 1080px) {
