--- a/src/components/terminal.scss
+++ b/src/components/terminal.scss
@@ -2,10 +2,9 @@
 
 .terminal {
   &__window {
-    font-size: 1.7rem;
+    font-size: 2.1rem;
     width: 100%;
     margin: 4rem auto;
-
     border-radius: 0 0 0.1rem 0.1rem;
   }
 
@@ -52,6 +51,7 @@
     color: $t-command-color;
     display: flex;
     flex-wrap: wrap;
+    
   }
 
   &__btn,
@@ -90,11 +90,15 @@
 @media (min-width: 108rem) {
   .terminal {
     &__window {
-      font-size: 1.9rem;
+      font-size: 2.05rem;
       margin: 8rem auto;
     }
+
+    &__body {
+      padding: 3rem;
+    }
     &__command {
-      padding-bottom: 3rem;
+      padding-bottom: 2.5rem;
     }
   }
 }
