--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -35,28 +35,29 @@ body {
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
-  background: #212020;
+  background: #dcdcdc;
 }
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #C0C0C0;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #dcdcdc;
+  background: 	#A9A9A9;
 }
 
 .section__title {
   width: 100%;
   font-size: 2.8rem;
+  font-weight: 500;
   margin-bottom: 6rem;
   text-align: center;
 
   &:after {
     content: "";
-    height: 1px;
+    height: 2px;
     background: linear-gradient(
       to right,
       rgba(0, 0, 0, 0) 0%,
-      rgba(0, 173, 181, 1) 50%,
+      rgba(116, 127, 224, 1) 50%,
       rgba(0, 0, 0, 0) 100%
     );
     display: block;
@@ -67,12 +68,12 @@ body {
 }
 
 .link {
-  color: $secondary-color;
+  color: #35feff;
   text-decoration: none;
 
   &:hover {
     opacity: 0.8;
-    transition: 0.1s ease-in-out;
+    transition: 0.2s ease-in-out;
   }
 }
 
@@ -80,7 +81,7 @@ body {
 
 @media (min-width: 1080px) {
   #root {
-    max-width: 45vw;
+    max-width: 50vw;
   }
 }
 
