--- a/src/components/design-tokens/variables.scss
+++ b/src/components/design-tokens/variables.scss
@@ -4,13 +4,14 @@ $bg-color: #F6F9FC;
 
 /* Projects section */
 
-$p-bg-color: #383838;
+$p-bg-color: #FFF;
 $skill-color: #92eac0;
-/* $btn-bg-color: #; */
-$btn2-bg-color: #121212;
+$btn-bg-color: #7795f8; 
+$btn2-bg-color: #FFF;
 $btn-hover-color: #00c2cc;
 $btn2-hover-color: #121212e6;
-$btn-text-color: #000;
+$btn-text-color: #FFF;
+$btn2-text-color: #747fe0;
 /* $btn-text-color: ; */
 
 /* Terminal section */
