--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -18,20 +18,15 @@ header {
 
   & a {
     display: inline-block;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     text-decoration: none;
     color: $primary-color;
-
-    &:hover {
-      color: $secondary-color;
-      transition: 0.2s ease-in-out;
-    }
   }
 }
 
 @media (min-width: 1080px) {
   header {
-    max-width: 45vw;
+    max-width: 55vw;
     margin-top: 1rem;
     height: 10rem;
     justify-content: flex-end;
@@ -41,16 +36,38 @@ header {
     & ul {
       flex-direction: row;
       justify-content: flex-end;
-
+      padding-right: 3rem;
       text-align: right;
     }
 
     & ul li {
-      margin-left: 4rem;
+      margin-left: 5rem;
     }
 
     & a {
-      font-size: 1.9rem;
+      font-size: 2.1rem;
+      position: relative;
+      transition: 0.2s ease-in-out;
+
+      &:hover {
+        color: $secondary-color;
+      }
+
+      &:after {
+        opacity: 0;
+        display: block;
+        position: absolute;
+        bottom: -25px;
+        width: 100%;
+        height: 3px;
+        background: $secondary-color;
+        transition: opacity 0.3s ease;
+        content: "";
+      }
+
+      &:hover:after {
+        opacity: 1;
+      }
     }
   }
 }
