--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -38,10 +38,10 @@ body {
   background: #dcdcdc;
 }
 ::-webkit-scrollbar-thumb {
-  background: #C0C0C0;
+  background: #c0c0c0;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: 	#A9A9A9;
+  background: #a9a9a9;
 }
 
 .section__title {
