--- a/src/components/design-tokens/variables.scss
+++ b/src/components/design-tokens/variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #525F7F;
 $secondary-color: #747fe0;
+$secondary-color: rgb(116, 127, 224);
 $bg-color: #F6F9FC;
 
 /* Projects section */
