--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -61,7 +61,7 @@ header {
         width: 100%;
         height: 3px;
         background: $secondary-color;
-        transition: opacity 0.3s ease;
+        transition: opacity 0.2s ease-in-out;
         content: "";
       }
 
