--- a/src/components/design-tokens/variables.scss
+++ b/src/components/design-tokens/variables.scss
@@ -1,28 +1,2 @@
-$primary-color: #525F7F;
+$primary-color: #525f7f;
 $secondary-color: #747fe0;
-$secondary-color: rgb(116, 127, 224);
-$bg-color: #F6F9FC;
-
-/* Projects section */
-
-$p-bg-color: #FFF;
-$skill-color: #92eac0;
-$btn-bg-color: #7795f8; 
-$btn2-bg-color: #FFF;
-$btn-hover-color: #00c2cc;
-$btn2-hover-color: #121212e6;
-$btn-text-color: #FFF;
-$btn2-text-color: #747fe0;
-/* $btn-text-color: ; */
-
-/* Terminal section */
-
-$t-bar-color: #e4e3e5;
-$t-bg-color: #5A5D7A;
-
-$t-prompt-color: #f7f7f7;
-$t-command-color: #e7d184;
-
-$t-btn-color: #f96256;
-$t-btn2-color: #fdbc3d;
-$t-btn3-color: #33c948;
