--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -1,7 +1,7 @@
 @import "../components/design-tokens/variables.scss";
 
 .project {
-  background-color: $p-bg-color;
+  background-color: #FFF;
   color: $primary-color;
   margin-bottom: 5rem;
   width: 100%;
@@ -47,7 +47,7 @@
   &__skill {
     font-size: 1.5rem;
     border-radius: 0.4rem;
-    border: 2px solid $skill-color;
+    border: 2px solid #92eac0;
     padding: 0.5rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
@@ -70,7 +70,7 @@
     font-weight: 600;
     box-sizing: border-box;
     background: $secondary-color;
-    color: $btn-text-color;
+    color: #FFF;
 
     &:hover {
       opacity: 0.8;
@@ -80,8 +80,8 @@
 }
 
 .secondary {
-  background: $btn2-bg-color;
-  color: $btn2-text-color;
+  background: #FFF;
+  color: #747fe0;
 }
 
 @media (min-width: 1080px) {
